k8s/components/monitor/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitor
  labels:
    app.kubernetes.io/managed-by: argocd
    homelab/cluster: homelab
    homelab/env: prod
    homelab/stack: monitoring
